force-app/main/default/objects/Answer__c/fields/Abbreviated_Value__c.field-meta.xml
<CustomField>
    <fullName>Abbreviated_Value__c</fullName>
    <label>Abbreviated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>