force-app/main/default/objects/Answer__c/fields/Abrreviated_Key__c.field-meta.xml
<CustomField>
    <fullName>Abrreviated_Key__c</fullName>
    <label>Abrreviated Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>