force-app/main/default/objects/Answer__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set this answer as a default for the related quetion</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>