force-app/main/default/objects/Answer__c/fields/Icon_Path__c.field-meta.xml
<CustomField>
    <fullName>Icon_Path__c</fullName>
    <description>Filename of the icon stored in iSelect Core library including the extension i.e.: hnc_icon.png</description>
    <inlineHelpText>Filename of the icon stored in iSelect Core library including the extension i.e.: hnc_icon.png</inlineHelpText>
    <label>Icon Name</label>
    <type>TextArea</type>
</CustomField>