force-app/main/default/objects/Answer__c/fields/Related_Question__c.field-meta.xml
<CustomField>
    <fullName>Related_Question__c</fullName>
    <label>Related Question</label>
    <length>50</length>
    <type>Text</type>
</CustomField>